# ragxperiment.ai

./: .gitignore  README.md  package-lock.json  tailwind.config.js
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  upload.py
backend/app/api/auth/: routes.py  schemas.py
backend/app/api/dashboard/: dashboard_routes.py
backend/app/api/routes/: rag_route.py  user_router.py
backend/app/api/upload_doc/: file_upload_route.py
backend/app/common/: auth_dependencies.py
backend/app/constant/: file_upload_enum.py
backend/app/core/: config.py  database.py  global_exceptions.py  logging.py  security.py
backend/app/models/: download_llama.py  file_chunk.py  file_upload.py  user.py
backend/app/repositories/: base.py  user_repository.py
backend/app/schemas/: auth.py  file_upload.py  rag.py
backend/app/services/: auth_service.py  dashboard_service.py  doc_parser.py  embeddings.py  file_parser_service.py  file_upload_service.py  llm_client.py  llm_service.py  rag_service.py  user_service.py  vector_store_service.py
backend/test_chroma/: demo_chroma.py  reset_chroma.py
frontend/: .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/environment/: .env.development  .env.production
frontend/src/: App.tsx  main.tsx  style.css  vite-env.d.ts
frontend/src/api/: auth.service.ts  dashboard.serrvice.ts  file.service.ts  http.ts  httpService.ts
frontend/src/components/common/: Input.tsx  Toastr.tsx
frontend/src/components/layout/: LayoutWrapper.tsx  Navbar.tsx  Sidebar.tsx  layout.css
frontend/src/config/: PathConfig.ts  connection.ts  env.ts  http.interceptor.ts  httpService.ts  interceptor.ts
frontend/src/modules/auth/: auth.css  auth.tsx  login.tsx  signup.tsx
frontend/src/modules/chat/: chat.tsx
frontend/src/modules/dialogs/: uploadDocumentModal.css  uploadDocumentModal.tsx
frontend/src/modules/knowledge-base/: knowledgeBase.tsx  knowledgebase.css
frontend/src/modules/pages/: Dashboard.tsx  dashboard.css
frontend/src/routes/: AppRoutes.tsx  ProtectedRoute.tsx
frontend/src/styles/: tailwind.css  variable.css
frontend/src/tests/: auth.test.tsx
