[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ashutosh Kumar <aashutosh.blaze@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]

# Runtime dependencies
[tool.poetry.dependencies]
python = ">=3.12,<4.0"
loguru = ">=0.7.3,<0.8.0"
fastapi = ">=0.117.1,<0.118.0"
uvicorn = { extras = ["standard"], version = ">=0.36.0,<0.37.0" }
sqlalchemy = ">=2.0.43,<3.0.0"
alembic = ">=1.16.5,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-jose = { extras = ["cryptography"], version = ">=3.5.0,<4.0.0" }
python-multipart = ">=0.0.20,<0.0.21"
python-dotenv = ">=1.1.1,<2.0.0"
chromadb = ">=1.1.0,<2.0.0"
openai = ">=1.108.1,<2.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
email-validator = ">=2.3.0,<3.0.0"
langchain = "^0.3.27"
tiktoken = "^0.11.0"
pypdf2 = "^3.0.1"
python-docx = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"
ruff = ">=0.13.1,<0.14.0"
mypy = ">=1.18.2,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
